<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name" translatable="false">AirTO</string>
    <string name="version_title">Version</string>
    <string name="email" translatable="false">dev.michele.donato@gmail.com</string>
    <string name="developed_by">Developed by</string>
    <string name="developer">MICHELE DONATO</string>
    <string name="city">Turin</string>
    <string name="credits">Credits</string>
    <string name="agencies" translatable="false">DarkSky.net, Comune di Torino e Città metropolitana di Torino</string>

    <string name="content_authority" translatable="false">com.devmicheledonato.airto</string>

    <string name="action_settings">Settings</string>
    <string name="action_car_traffic_ban">Car ban</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_network_no_weather_data">No network connectivity!</string>
    <string name="no_network">Will refresh when network available.</string>
    <string name="error_data">No weather data&#8230;\nWill load data when the network is available.</string>

    <string name="car_ban_title">Car traffic ban</string>
    <string name="car_ban_no_info_msg">Sorry! No information available, please try again later.</string>

    <!-- Temperature format -->
    <string name="format_temperature" translatable="false">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- The format of the notification we show when the weather is updated -->
    <string name="format_notification">
        Forecast:<xliff:g id="condition">%1$s</xliff:g>
        \nHigh:<xliff:g id="high">%2$s</xliff:g>
        Low:<xliff:g id="low">%3$s</xliff:g>
        \nAir quality:<xliff:g id="ipqa">%4$s</xliff:g>
    </string>

    <string name="clear">Clear</string>
    <string name="cloudy">Cloudy</string>
    <string name="partly_cloudy">Partly cloudy</string>
    <string name="snow">Snow</string>
    <string name="fog">Fog</string>
    <string name="hail">Hail</string>
    <string name="rain">Rain</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="tornado">Tornado</string>
    <string name="wind">Wind</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_weather_notifications_key" translatable="false">enable_weather_notifications</string>
    <string name="pref_enable_weather_notifications_label">Weather notifications</string>
    <string name="pref_last_weather_notification_key" translatable="false">last_weather_notification</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>

    <string name="pref_enable_car_ban_notifications_key" translatable="false">enable_car_ban_notifications</string>
    <string name="pref_enable_car_ban_notifications_label">Car traffic ban notifications</string>
    <string name="pref_last_car_ban_notification_key" translatable="false">last_car_ban_notification</string>
    <string name="ipqa_title">Air quality</string>
    <string name="ipqa_no_info_msg">No information available, please try again later.</string>
    <string name="ipqa_accettabile">Air quality is acceptable, the expected concentrations of pollutants are close to the reference thresholds for the short-term limit and target values for the protection of human health.</string>
    <string name="ipqa_buona">The air quality is good, the expected concentrations of the pollutants are lower than the reference thresholds for the short-term limit and target values for the protection of human health.</string>
    <string name="ipqa_cattiva">Air quality is bad, the expected concentrations of pollutants are higher than the reference thresholds for the short-term limit and target values for the protection of human health.</string>
    <string name="ipqa_ottima">The air quality is excellent, the expected concentrations of the pollutants are considerably lower than the reference thresholds concerning the short-term limit and objective values for the protection of human health.</string>
    <string name="ipqa_pessima">Air quality is very bad, pollutant concentrations are well above the reference thresholds for short-term limit values and targets for the protection of human health.</string>

</resources>
