<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:defaultValue="@bool/show_notifications_by_default"
        android:key="@string/pref_enable_weather_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_weather_notifications_label" />

    <SwitchPreferenceCompat
        android:defaultValue="@bool/show_notifications_by_default"
        android:key="@string/pref_enable_car_ban_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_car_ban_notifications_label" />

    <Preference
        android:summary="@string/agencies"
        android:title="@string/credits" />

    <Preference
        android:summary="@string/app_version"
        android:title="@string/version_title" />

    <Preference
        android:summary="@string/developer"
        android:title="@string/developed_by" />

</PreferenceScreen>